Allow register without auth token in shouldNotFilter